# cceco

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cceco/: cli.py  impact.py  reader.py
docs/: design.md
docs/superpowers/plans/: 2026-06-09-cceco.md
tests/: test_cli.py  test_impact.py  test_reader.py
